k8s_manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-auth
  namespace: micro-users-auth
  labels:
    app: users-auth
    tags.datadoghq.com/env: "dev"
    tags.datadoghq.com/service: "users-auth"
    tags.datadoghq.com/version: "1.0.1"

spec:
  selector:
    matchLabels:
      app: users-auth
  template:
    metadata:
      labels:
        app: users-auth
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/service: "users-auth"
        tags.datadoghq.com/version: "1.0.1"
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: mi-container-user-auth
        image: luisesillo/users-auth:1.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 1024m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: users-auth
spec:
  type: ClusterIP
  selector:
    app: users-auth
  ports:
  - name: users-auth-ports
    port: 5000
    targetPort: 80
